# view

./: Cargo.toml
flare-core/: Cargo.toml
flare-core/src/editor/: buffer.rs
paladin-core/: Cargo.toml
paladin-core/src/: editor.rs  lib.rs  lsp.rs  ts.rs
paladin-core/src/editor/: buffer.rs
paladin-view/: Cargo.toml
paladin-view-macros/: Cargo.toml
paladin-view-macros/src/: lib.rs
paladin-view/src/: app.rs  elements.rs  lib.rs  patch.rs  prelude.rs  runner.rs  start.rs  state.rs  surrogate.rs  text.rs
src/: app.rs  elements.rs  lib.rs  main.rs  patch.rs  runner.rs  start.rs  text.rs  utils.rs
src/components/: root.rs
view/: Cargo.toml
view-macros/: Cargo.toml
view-macros/src/: lib.rs
view/src/: app.rs  elements.rs  lib.rs  prelude.rs  runner.rs  start.rs  text.rs  utils.rs
