[package]
name = "view-editor"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["view", "view-macros", "flare-core"]

[dependencies]
serde_json = "1.0.122"
tree-sitter.workspace = true
tree-sitter-rust.workspace = true
lsp-types.workspace = true
miette.workspace = true
view = { version = "0.1.0", path = "view" }
bevy_reflect = "0.14.1"

[workspace.dependencies]
tree-sitter = "0.22.2"
tree-sitter-rust = { git = "https://github.com/Zower/tree-sitter-rust.git" }
# tracing = "0.1.40"
serde = { version = "1.0.192", features = ["derive"] }
# tracing-subscriber = { version = "0.3.18", features = ["std", "env-filter"] }
# tracing-error = "0.2.0"
winit = { version = "0.29.3", features = ["serde"] }
lsp-types = "0.95.0"
miette = { version = "5.7.0", features = ["fancy"] }
