[package]
name = "view-editor"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["view", "view-macros", "flare-core"]

[dependencies]
view = { version = "0.1.0", path = "view" }
editor = { version = "0.1.0", path = "flare-core", package = "flare-core" }
bevy_reflect = "0.14.1"
cosmic-text.workspace = true
tree-sitter.workspace = true
tree-sitter-rust.workspace = true
lsp-types.workspace = true
miette.workspace = true

[workspace.dependencies]
tree-sitter = "0.22.2"
tree-sitter-rust = { git = "https://github.com/Zower/tree-sitter-rust.git" }
lsp-types = "0.95.0"
miette = { version = "5.7.0", features = ["fancy"] }
cosmic-text = "0.12.1"
serde = { version = "1.0.192", features = ["derive"] }