[package]
name = "paladin-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crop = "0.4.1"
url = "2.4.1"
serde.workspace = true
serde_json = "1.0.108"
lsp-types.workspace = true
miette.workspace = true
tree-sitter.workspace = true
tree-sitter-rust.workspace = true
slotmap = "1.0.7"
ahash = "0.8.11"
strum = { version = "0.26.3", features = ["derive"] }
