[package]
name = "paladin-view"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy_reflect = "0.14.1"
bon = "1.0.6"
crossbeam = "0.8.4"
enum_delegate = "0.2.0"
femtovg = { git = "https://github.com/Zower/femtovg.git", default-features = false, features = [
    "glutin",
] }
glutin = { version = "0.32.0" }
glutin-winit = "0.5.0"
imgref = "1.10.0"
raw-window-handle = "0.6.0"
rgb = { version = "0.8.36", features = ["serde"] }
serde.workspace = true
swash = "0.1.8"
cosmic-text.workspace = true
winit = { version = "0.30.5", features = ["serde"] }
taffy = "0.5.2"
paladin-view-macros = { version = "0.1.0", path = "../paladin-view-macros" }
miette.workspace = true
bincode = "1.3.3"
