[package]
name = "view"
version = "0.1.0"
edition = "2021"


[dependencies]
bevy_reflect = "0.14.1"
bon = "1.0.6"
crossbeam = "0.8.4"
cosmic-text = "0.11.2"
enum_delegate = "0.2.0"
serde_json = "1.0.122"
femtovg = { git = "https://github.com/Zower/femtovg.git", default-features = false, features = [
    "glutin",
] }
glutin = { version = "0.31.1" }
glutin-winit = "0.4.2"
imgref = "1.10.0"
raw-window-handle = "0.5.2"
rgb = "0.8.36"
swash = "0.1.8"
# serde.workspace = true
winit.workspace = true
tree-sitter.workspace = true
tree-sitter-rust.workspace = true
lsp-types.workspace = true
miette.workspace = true
taffy = "0.5.2"
view-macros = { version = "0.1.0", path = "../view-macros" }